--- a/src/TotalCost.css
+++ b/src/TotalCost.css
@@ -16,7 +16,7 @@
   border-radius: 15px;
   background-color: white;
   color: #333;
-  margin: 0;
+  margin-top: 200px;
   padding: 55px;
   width: 80vw;
 }
