--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body, html {
   display: flex;
   width: 100vw;
   height: 100vh;
-  background-image: url("https://cdn.pixabay.com/photo/2018/07/05/14/45/conference-3518465_1280.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2017/08/10/18/26/business-2626052_1280.jpg");
   background-size: cover;
   background-position: center;
   justify-content: center;
@@ -31,18 +31,19 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
   z-index: 0;
 }
 
 .first_page h1 {
   position: relative;
   z-index: 1;
+  color: #c1974a;
 }
 
 .get-started-btn {
-  background-color:#EFC16B;
-  color: black;
+  background-color:#4117F6;
+  color: white;
   border: none;
   padding: 20px 40px;
   font-size: 19px;
